<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menu_home"
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:title="@string/menu_test"
        android:id="@+id/menu_tests"
        android:icon="@drawable/ic_test"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:title="@string/menu_analysis"
        android:id="@+id/menu_analysis"
        android:icon="@drawable/ic_analysis"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:title="@string/menu_doubts"
        android:id="@+id/menu_doubts"
        android:icon="@drawable/ic_social"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:title="@string/menu_profile"
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

</menu>